 6 Apr 96:
  o Added guidelines for creating a pkgIndex.tcl file for use with TclX.  Build
    a prototype file, pkgIndex.proto, that can be merged with other
    pkgIndex.tcl files.
-------------------------------------------------------------------------------
24 Apr 96:
  o Chanced 'mkdir -path' to not return an error if the full path already
    exists.
===============================================================================
25 Apr 96: Released TclX 7.5.0
===============================================================================
29 Apr 96:
  o Fixed build problems with shared libraries on Solaris and HP-UX.
  o Added *LIB_SPEC variables to tclx/tkxConfig.sh. 
  o Removed explicit support for master installation model.  The same affect
    can be achieved with --prefix.
  o Its no longer a requirement to use --enabled-shared with Tcl & Tk to use it
    with TclX.
===============================================================================
 2 May 96: Released TclX 7.5.0 patch 1
===============================================================================
 4 May 96:
  o Fix bug where manual pages were not installed.
-------------------------------------------------------------------------------
 6 May 96:
  o Fixed lindex and lrange indexing out of bounds memory when negative indexes
    are used.
-------------------------------------------------------------------------------
 8 May 96:
  o Even more changes to deal with the runtime library search path correctly
    on Solaris and others.
  o Fixed problems when Tcl/Tk is built with --srcdir.
===============================================================================
10 May 96: Released TclX 7.5.1
===============================================================================
18 May 96:
  o Fixed problem in initialization code that caused Tk send.test to hang.
-------------------------------------------------------------------------------